--- a/contact-us.html
+++ b/contact-us.html
@@ -96,8 +96,8 @@
                     <div class="header-btn">
                       <a
                         class="ttm-btn ttm-btn-size-md ttm-btn-shape-square ttm-btn-style-border ttm-btn-color-skincolor"
-                        href="contact-us.html"
-                        >CONTACT US</a
+                        href="reservation.html"
+                        >RESERVATION</a
                       >
                     </div>
                     <div class="ttm-menu-toggle">
@@ -113,7 +113,7 @@
                     </div>
                     <nav id="menu" class="menu">
                       <ul class="dropdown">
-                        <li class="active">
+                        <li>
                           <a href="index.html">Home</a>
                         </li>
                         <li>
@@ -121,7 +121,7 @@
                           <ul>
                             <li><a href="aboutus-1.html">About Us</a></li>
                             <li><a href="our-chefs.html">Our Chefs</a></li>
-                            <li><a href="reservation.html">Reservation</a></li>
+
                             <li><a href="faq.html">FAQs</a></li>
                             <li><a href="our-event.html">Our Events</a></li>
                           </ul>
@@ -134,6 +134,9 @@
                         </li>
                         <li>
                           <a href="blog.html">Blog</a>
+                        </li>
+                        <li class="active">
+                          <a href="contact-us.html">Contact Us</a>
                         </li>
                       </ul>
                     </nav>
