--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                     <div class="header-btn">
                       <a
                         class="ttm-btn ttm-btn-size-md ttm-btn-shape-square ttm-btn-style-border ttm-btn-color-skincolor"
-                        href="contact-us.html"
-                        >CONTACT US</a
+                        href="reservation.html"
+                        >RESERVATION</a
                       >
                     </div>
                     <div class="ttm-menu-toggle">
@@ -137,7 +137,7 @@
                           <ul>
                             <li><a href="aboutus-1.html">About Us</a></li>
                             <li><a href="our-chefs.html">Our Chefs</a></li>
-                            <li><a href="reservation.html">Reservation</a></li>
+
                             <li><a href="faq.html">FAQs</a></li>
                             <li><a href="our-event.html">Our Events</a></li>
                           </ul>
@@ -150,6 +150,9 @@
                         </li>
                         <li>
                           <a href="blog.html">Blog</a>
+                        </li>
+                        <li>
+                          <a href="contact-us.html">Contact Us</a>
                         </li>
                       </ul>
                     </nav>
